objects/Heron_OAuth__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>this custom setting stored JWT Token credential for CallOut to Heron. Token Access will be updated in apex, set duration for 24 hours.</description>
    <fields>
        <fullName>Certificate__c</fullName>
        <description>the CA signed certificate stored in the certificate security</description>
        <label>Certificate</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>the duration in minutes</description>
        <label>Duration(In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JWT_Token2__c</fullName>
        <description>part 2 of the JWT token</description>
        <label>JWT_Token2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JWT_Token3__c</fullName>
        <label>JWT_Token3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JWT_Token4__c</fullName>
        <label>JWT_Token4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Time__c</fullName>
        <description>the last time the token was updated. It is used to calculated the token duration.</description>
        <label>Last Updated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <description>Used this token for Refresh</description>
        <label>Refresh Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <label>Heron OAuth</label>
</CustomObject>